feat(performance): enhance mobile performance with lazy loading and caching
- Implemented lazy loading for heavy components and modals to improve initial load times and responsiveness on mobile devices.
- Introduced caching strategies for API calls to enhance performance and reduce unnecessary network requests.
- Optimized various components with React.memo to prevent unnecessary re-renders, further improving application efficiency.
- Updated documentation to reflect new performance optimization techniques and caching utilities.

Closes Story 10.4 and significantly enhances the user experience on mobile networks.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/agenseek-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Story 10.4: Performance optimization - preconnect and preload -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
+    <!-- DNS prefetch for Supabase -->
+    <link rel="dns-prefetch" href="https://supabase.co">
+
+    <!-- Meta tags for performance -->
+    <meta name="theme-color" content="#10b981" />
+    <meta name="description" content="BMAD Learning Hub - מרכז הלמידה של BMAD" />
+
     <title>Agenseek - BMAD Learning Hub</title>
   </head>
   <body>
