Add comprehensive guide for Game Agents and implement dark mode support
- Completed the guide "מדריך אגנטים - חלק 3: אגנטי משחקים," detailing the roles of Game Designer, Game Architect, and Game Dev, along with practical examples and FAQs.
- Updated `GUIDES-PROGRESS-TRACKER.md` to reflect the completion status of 24 out of 47 guides (51%).
- Introduced a new `ThemeContext` for managing light/dark mode across the application, including localStorage persistence and system preference detection.
- Enhanced UI components to support dark mode, ensuring a consistent user experience across themes.
- Verified all changes for functionality and resolved any TypeScript errors, preparing the features for production.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
     <meta name="theme-color" content="#10b981" />
     <meta name="description" content="BMAD Learning Hub - מרכז הלמידה של BMAD" />
 
+    <!-- Story 0.6: Prevent flash of wrong theme on page load -->
+    <script>
+      try {
+        const theme = localStorage.getItem('agenseek-theme') || 'system';
+        let resolved = 'light';
+        
+        if (theme === 'system') {
+          resolved = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        } else {
+          resolved = theme;
+        }
+        
+        document.documentElement.classList.add(resolved);
+        document.documentElement.setAttribute('data-theme', resolved);
+      } catch (e) {
+        // Silently fail if localStorage is not available
+      }
+    </script>
+
     <title>Agenseek - BMAD Learning Hub</title>
   </head>
   <body>
