Implement Dark Mode Infrastructure and Complete Agent Guides
- Added Story 0.6 for dark mode infrastructure, ensuring 100% coverage across all application pages and components.
- Introduced Story 0.15 to track future enhancements for dark mode visual polish and theme toggle restoration.
- Completed new guides for agents, including "מדריך אגנטים - חלק 4ב" and "מדריך אגנטים - חלק 5," marking the agents series as fully complete.
- Updated `0X-STORIES-SUMMARY.md` to reflect the latest story statuses and added new entries for dark mode and agent guides.
- Enhanced UI components to support dark mode, ensuring a consistent user experience across themes.
- Verified all changes for functionality and resolved any TypeScript errors, preparing the features for production.

--- a/index.html
+++ b/index.html
@@ -18,20 +18,31 @@
     <meta name="theme-color" content="#10b981" />
     <meta name="description" content="BMAD Learning Hub - מרכז הלמידה של BMAD" />
 
-    <!-- Story 0.6: Prevent flash of wrong theme on page load -->
+    <!-- Story 0.6 / Story 0.15: Prevent flash of wrong theme on page load -->
     <script>
       try {
-        const theme = localStorage.getItem('agenseek-theme') || 'system';
-        let resolved = 'light';
-        
-        if (theme === 'system') {
-          resolved = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        // Story 0.15: Force light mode while dark mode toggle is hidden
+        const FORCE_LIGHT_MODE = true;
+
+        if (FORCE_LIGHT_MODE) {
+          // Force light mode and update localStorage
+          localStorage.setItem('agenseek-theme', 'light');
+          document.documentElement.classList.add('light');
+          document.documentElement.setAttribute('data-theme', 'light');
         } else {
-          resolved = theme;
+          // Normal theme logic (will be restored in Story 0.15)
+          const theme = localStorage.getItem('agenseek-theme') || 'system';
+          let resolved = 'light';
+
+          if (theme === 'system') {
+            resolved = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+          } else {
+            resolved = theme;
+          }
+
+          document.documentElement.classList.add(resolved);
+          document.documentElement.setAttribute('data-theme', resolved);
         }
-        
-        document.documentElement.classList.add(resolved);
-        document.documentElement.setAttribute('data-theme', resolved);
       } catch (e) {
         // Silently fail if localStorage is not available
       }
