--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
     <meta name="theme-color" content="#10b981" />
     <meta name="description" content="BMAD Learning Hub - מרכז הלמידה של BMAD" />
 
+    <!-- Open Graph / Facebook - Story 0.X: Social media preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://agenseek.vercel.app/" />
+    <meta property="og:title" content="Agenseek - BMAD Learning Hub" />
+    <meta property="og:description" content="מרכז הלמידה של BMAD - למד לבנות פתרונות AI עם מתודולוגיית BMAD" />
+    <meta property="og:image" content="https://agenseek.vercel.app/agenseek-logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="he_IL" />
+    <meta property="og:site_name" content="Agenseek" />
+
+    <!-- Twitter Card - Story 0.X: Social media preview -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://agenseek.vercel.app/" />
+    <meta name="twitter:title" content="Agenseek - BMAD Learning Hub" />
+    <meta name="twitter:description" content="מרכז הלמידה של BMAD - למד לבנות פתרונות AI עם מתודולוגיית BMAD" />
+    <meta name="twitter:image" content="https://agenseek.vercel.app/agenseek-logo.png" />
+
     <!-- Story 0.6 / Story 0.15: Prevent flash of wrong theme on page load -->
     <script>
       try {
